# favicon-generator

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: cli.rs  execute.rs  lib.rs  main.rs
src/resources/: browser-config.xml  browserconfig.xml  favicon.html  manifest.json
