[package]
name = "favicon-generator"
version = "0.3.18"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/favicon-generator"
homepage = "https://magiclen.org/favicon-generator"
keywords = ["favicon", "generating", "web-app", "icon"]
categories = ["command-line-utilities"]
description = "It helps you generate favicons with different formats and sizes."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.2.23"
concat-with = "0.2"
terminal_size = "0.2"

execute = "0.2.4"
image-convert = "0.12"
scanner-rust = "2.0.8"
serde_json = "1"
tera = "1.0.0"
once_cell = "1"
slash-formatter = "3"

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "std", "serde", "boolean", "number", "regex"]