[package]
name = "favicon-generator"
version = "0.4.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/magiclen/favicon-generator"
homepage = "https://magiclen.org/favicon-generator"
keywords = ["favicon", "generating", "web-app", "icon"]
categories = ["command-line-utilities"]
description = "It helps you generate favicons with different formats and sizes."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

image-convert = "0.17"
scanner-rust = "2"
serde_json = "1"
tera = "1"
html-escape = "0.2"